# tunix-accel

./: .gitignore  01-cce.html  02-packing.html  FUTURE_PATCH_NOTES.md  README.md  RESEARCH_DIRECTIONS.md  index.html  pyproject.toml  requirements.txt  setup.py  sitecustomize.py  styles.css  tunix_accel_autopatch.pth  tunix_accel_startup.py
01-CCE/: GEMMA3_1B_E2B_EXPERIMENT_DESIGN.md  GEMMA3_270M_EXPERIMENT_DESIGN.md  README.md  REPRODUCE.md  TECHNICAL_REPORT.md  collect_gemma3_12b_27b_cce_focused_results.py  collect_gemma3_270m_4chip_chunk_results.py  collect_gemma3_270m_4chip_frontier_results.py  collect_gemma3_270m_4chip_quality_results.py  collect_gemma3_270m_cce_results.py  collect_gemma3_270m_mesh_repeat_results.py  collect_gemma3_270m_mesh_results.py  collect_gemma3_270m_outlier_hlo_results.py  collect_gemma_1b_e2b_cce_transfer_results.py  collect_gemma_4b_e4b_cce_transfer_results.py  collect_qwen3_0p6b_cce_transfer_results.py  remote_gemma3_270m_cce_worker.sh  run_gemma3_270m_cce_sweep.py  run_gemma_training_benchmark.py
02-PACKING/: GEMMA3_270M_EXPERIMENT_DESIGN.md  README.md  REPRODUCE.md  TECHNICAL_REPORT.md  aggregate_dataset_sweep.py  aggregate_gemma3_1b_transfer.py  aggregate_qwen3_0p6b_transfer.py  aggregate_scale_smoke.py  aggregate_training_quality.py  aggregate_transfer_1b_e2b.py  remote_gemma3_270m_packing_worker.sh  run_dataset_profile_benchmark.py  run_efficiency_benchmark.py  run_gemma3_270m_packing_sweep.py  run_gemma_tokenizer_benchmark.py  run_gemma_training_benchmark.py  visualize_270m_results.py
03-TILED-MLP/: README.md  REPRODUCE.md  (+3 more)
(+636 files in other folders)
