[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunix-accel"
version = "0.1.0"
description = "Drop-in acceleration and memory-efficiency patches for JAX/Tunix training"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tunix_accel*"]
